# wordhatch

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
apps/api/: dto.py  main.py
apps/web_extension/: .prettierrc  eslint.config.ts  package.json  wxt.config.ts
apps/web_extension/src/entrypoints/background/: index.ts
apps/web_extension/src/entrypoints/content/: index.ts
apps/web_extension/src/entrypoints/popup/: App.tsx
apps/web_extension/src/types/: shim.d.ts
tests/integration/apps/api/: test_translation.py
tests/integration/translation/: test_ollama_translator.py  test_wordnik_translator.py
tests/unit/: test_dictionary.py
tests/unittest/translation/applications/: test_use_cases.py
wordhatch/: dictionary.py  models.py
wordhatch/definition_provider/: interface.py
wordhatch/translation/application/: ports.py  use_cases.py
wordhatch/translation/domain/: values.py
