[project]
name = "wordhatch"
version = "0.1.0"
description = ""
authors = [
    {name = "Thummanoon Kunanuntakij",email = "tkunanuntakij@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
isort = "^6.0.1"
ruff = "^0.12.12"
pre-commit = "^4.3.0"
black = "^25.1.0"
mypy = "^1.17.1"

[tool.mypy]
files = ["wordhatch", "tests"]
strict = true

[tool.isort]
profile = "black"

[tool.poe.tasks]
pre-commit = "pre-commit run --all-files"
pre-commit-install = "pre-commit install"
test = "pytest"
ruff = "ruff check"
black = "black ."
mypy = "mypy"

[tool.pytest.ini_options]
pythonpath = [
    "."
]
addopts = "-ra -q"
