[project]
name = "wordhatch"
version = "0.1.0"
description = ""
authors = [
    {name = "Thummanoon Kunanuntakij",email = "tkunanuntakij@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.121.0,<0.122.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain (>=1.0.2,<2.0.0)",
    "langchain-ollama (>=1.0.0,<2.0.0)",
    "ollama (>=0.6.0,<0.7.0)",
    "httpx (>=0.28.1,<0.29.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
isort = "^6.0.1"
ruff = "^0.12.12"
pre-commit = "^4.3.0"
black = "^25.1.0"
mypy = "^1.17.1"
pytest-asyncio = "^1.2.0"

[tool.mypy]
files = ["wordhatch", "tests"]
strict = true

[tool.isort]
profile = "black"

[tool.poe.tasks]
pre-commit = "pre-commit run --all-files"
pre-commit-install = "pre-commit install"
test = "pytest"
unittest = "pytest -v -m 'not integration'"
integration = "pytest -v -m integration"
integration-api = "pytest -v -k 'api'"
ruff = "ruff check"
black = "black ."
mypy = "mypy"

[tool.pytest.ini_options]
pythonpath = [
    "."
]
addopts = "-ra -q"
markers = [
    "integration: integration test."
]